--- a/kubernetes/apps/default/telerising/app/helmrelease.yaml
+++ b/kubernetes/apps/default/telerising/app/helmrelease.yaml
@@ -44,13 +44,13 @@ spec:
     #           allowPrivilegeEscalation: false
     #           readOnlyRootFilesystem: false
     #           capabilities: { drop: ["ALL"] }
-    defaultPodOptions:
-      securityContext:
-        runAsNonRoot: false
-        runAsUser: 99
-        runAsGroup: 100
-        fsGroup: 100
-        fsGroupChangePolicy: OnRootMismatch
+    # defaultPodOptions:
+    #   securityContext:
+    #     runAsNonRoot: false
+    #     runAsUser: 99
+    #     runAsGroup: 100
+    #     fsGroup: 100
+    #     fsGroupChangePolicy: OnRootMismatch
 
     service:
       app:
