--- a/kubernetes/apps/databases/cloudnative-pg/barman-cloud/helmrelease.yaml
+++ b/kubernetes/apps/databases/cloudnative-pg/barman-cloud/helmrelease.yaml
@@ -1,92 +1,29 @@
 ---
+# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/source.toolkit.fluxcd.io/ocirepository_v1.json
+apiVersion: source.toolkit.fluxcd.io/v1
+kind: OCIRepository
+metadata:
+  name: plugin-barman-cloud
+spec:
+  interval: 15m
+  layerSelector:
+    mediaType: application/vnd.cncf.helm.chart.content.v1.tar+gzip
+    operation: copy
+  ref:
+    tag: 0.2.0
+  url: oci://ghcr.io/cloudnative-pg/charts/plugin-barman-cloud
+---
 apiVersion: helm.toolkit.fluxcd.io/v2
 kind: HelmRelease
 metadata:
-  name: &app barman-cloud
+  name: plugin-barman-cloud
 spec:
   interval: 1h
   chartRef:
     kind: OCIRepository
-    name: app-template
-    namespace: flux-system
-  install:
-    remediation:
-      retries: -1
-  upgrade:
-    cleanupOnFail: true
-    remediation:
-      retries: 3
+    name: plugin-barman-cloud
   values:
-    controllers:
-      barman-cloud:
-        containers:
-          app:
-            image:
-              repository: ghcr.io/cloudnative-pg/plugin-barman-cloud
-              tag: v0.7.0@sha256:641877c4dc6b879542bf7c6997ac4ae5db57e7543fc6ccced78b5b20e144880d
-            args:
-              - operator
-              - --leader-elect
-              - --server-cert=/server/tls.crt
-              - --server-key=/server/tls.key
-              - --client-cert=/client/tls.crt
-              - --server-address=:9090
-            env:
-              SIDECAR_IMAGE: ghcr.io/cloudnative-pg/plugin-barman-cloud-sidecar:${SIDECAR_IMAGE_VERSION}
-            probes:
-              liveness:
-                enabled: true
-                custom: true
-                spec:
-                  httpGet:
-                    path: /healthz
-                    port: &port 8081
-                  initialDelaySeconds: 0
-                  periodSeconds: 10
-                  timeoutSeconds: 1
-                  failureThreshold: 3
-              readiness:
-                enabled: true
-                custom: true
-                spec:
-                  httpGet:
-                    path: /readyz
-                    port: *port
-                  initialDelaySeconds: 0
-                  periodSeconds: 10
-                  timeoutSeconds: 1
-                  failureThreshold: 3
-            resources:
-              requests:
-                cpu: 10m
-              limits:
-                memory: 128Mi
-            securityContext:
-              allowPrivilegeEscalation: false
-              readOnlyRootFilesystem: true
-              capabilities: { drop: ["ALL"] }
-        serviceAccount:
-          name: *app
-    defaultPodOptions:
-      securityContext:
-        runAsNonRoot: true
-        runAsUser: 1000
-        runAsGroup: 1000
-    persistence:
-      client:
-        type: secret
-        name: &clientCert barman-cloud-client-tls
-      server:
-        type: secret
-        name: &serverCert barman-cloud-server-tls
-    service:
-      app:
-        annotations:
-          cnpg.io/pluginClientSecret: *clientCert
-          cnpg.io/pluginPort: "9090"
-          cnpg.io/pluginServerSecret: *serverCert
-        labels:
-          cnpg.io/pluginName: barman-cloud.cloudnative-pg.io
-        ports:
-          http:
-            port: 9090
+    crds:
+      create: true
+    rbac:
+      create: true
