--- a/kubernetes/apps/databases/cloudnative-pg/cluster/cluster-main.yaml
+++ b/kubernetes/apps/databases/cloudnative-pg/cluster/cluster-main.yaml
@@ -7,7 +7,8 @@ metadata:
     cnpg.io/skipEmptyWalArchiveCheck: 'enabled'
 spec:
   instances: 2
-  imageName: ghcr.io/cloudnative-pg/postgresql:17.5-22
+  # renovate: datasource=docker depName=ghcr.io/cloudnative-pg/postgresql repository=ghcr.io
+  imageName: ghcr.io/cloudnative-pg/postgresql:18.0
   storage:
     size: 15Gi
     storageClass: openebs-hostpath
@@ -38,9 +39,9 @@ spec:
         barmanObjectName: postgres
         serverName: postgres-v1
   # Note: Bootstrap is needed when recovering from an existing cnpg cluster
-  bootstrap:
-    recovery:
-      source: source
+  # bootstrap:
+  #   recovery:
+  #     source: source
   externalClusters:
     - name: source
       plugin:
