try run as root

--- a/kubernetes/apps/default/overseerr/app/helmrelease.yaml
+++ b/kubernetes/apps/default/overseerr/app/helmrelease.yaml
@@ -35,8 +35,8 @@ spec:
               TZ: ${TZ}
               LOG_LEVEL: "info"
             securityContext:
-              allowPrivilegeEscalation: false
-              readOnlyRootFilesystem: true
+              allowPrivilegeEscalation: true
+              readOnlyRootFilesystem: false
               capabilities: {drop: ["ALL"]}
             resources:
               requests:
@@ -45,10 +45,10 @@ spec:
                 memory: 1Gi
     defaultPodOptions:
       securityContext:
-        runAsNonRoot: true
-        runAsUser: 0
-        runAsGroup: 0
-        fsGroup: 0
+        runAsNonRoot: false
+        runAsUser: 1000
+        runAsGroup: 1000
+        fsGroup: 1000
         fsGroupChangePolicy: OnRootMismatch
 
     service:
