--- a/kubernetes/apps/databases/cloudnative-pg/cluster/cluster-main.yaml
+++ b/kubernetes/apps/databases/cloudnative-pg/cluster/cluster-main.yaml
@@ -19,7 +19,7 @@ spec:
   postgresql:
     parameters:
       max_connections: "600"
-      max_slot_wal_keep_size: -1
+      max_slot_wal_keep_size: "-1"
       shared_buffers: 512MB
   nodeMaintenanceWindow:
     inProgress: false
