--- a/kubernetes/apps/databases/cloudnative-pg/cluster/cluster-main.yaml
+++ b/kubernetes/apps/databases/cloudnative-pg/cluster/cluster-main.yaml
@@ -8,7 +8,7 @@ metadata:
 spec:
   instances: 3
   # renovate: datasource=docker depName=ghcr.io/cloudnative-pg/postgresql repository=ghcr.io
-  imageName: ghcr.io/cloudnative-pg/postgresql:18.0-standard-trixie@sha256:e49b9c7942d794dea5979a1b9ca2e4bff418ee96e060f67660150b05ea169e28
+  imageName: ghcr.io/cloudnative-pg/postgresql:17.6-standard-trixie
   storage:
     size: 15Gi
     storageClass: openebs-hostpath
@@ -19,7 +19,7 @@ spec:
   postgresql:
     parameters:
       max_connections: "600"
-      max_slot_wal_keep_size: "-1"
+      max_slot_wal_keep_size: 10Gi
       shared_buffers: 512MB
   nodeMaintenanceWindow:
     inProgress: false
