--- a/kubernetes/apps/databases/cloudnative-pg/cluster/cluster-main.yaml
+++ b/kubernetes/apps/databases/cloudnative-pg/cluster/cluster-main.yaml
@@ -8,7 +8,7 @@ metadata:
 spec:
   instances: 3
   # renovate: datasource=docker depName=ghcr.io/cloudnative-pg/postgresql repository=ghcr.io
-  imageName: ghcr.io/cloudnative-pg/postgresql:17.5
+  imageName: ghcr.io/cloudnative-pg/postgresql:17
   storage:
     size: 15Gi
     storageClass: openebs-hostpath
@@ -19,7 +19,7 @@ spec:
   postgresql:
     parameters:
       max_connections: "600"
-      max_slot_wal_keep_size: 10Gi
+      max_slot_wal_keep_size: 10GB
       shared_buffers: 512MB
   nodeMaintenanceWindow:
     inProgress: false
