--- a/kubernetes/apps/databases/cloudnative-pg/cluster/cluster-main.yaml
+++ b/kubernetes/apps/databases/cloudnative-pg/cluster/cluster-main.yaml
@@ -8,7 +8,7 @@ metadata:
 spec:
   instances: 3
   # renovate: datasource=docker depName=ghcr.io/cloudnative-pg/postgresql repository=ghcr.io
-  imageName: ghcr.io/cloudnative-pg/postgresql:17
+  imageName: ghcr.io/cloudnative-pg/postgresql:17.6-standard-trixie@sha256:e1a25eb88454bdd667589686132b6f1530835a6d7a3fa495e2a03777bd07d75a
   storage:
     size: 15Gi
     storageClass: openebs-hostpath
