--- a/kubernetes/apps/databases/cloudnative-pg/cluster/cluster-main.yaml
+++ b/kubernetes/apps/databases/cloudnative-pg/cluster/cluster-main.yaml
@@ -16,11 +16,23 @@ spec:
     name: cloudnative-pg-secret
   enableSuperuserAccess: true
   primaryUpdateStrategy: unsupervised
+  primaryUpdateMethod: switchover
   postgresql:
     parameters:
       max_connections: "600"
       max_slot_wal_keep_size: 10GB
       shared_buffers: 512MB
+    extensions:
+      - name: vchord
+        image:
+          # renovate: datasource=docker depName=ghcr.io/tensorchord/vchord-scratch
+          reference: ghcr.io/tensorchord/vchord-scratch:pg18-v0.5.3
+        dynamic_library_path:
+          - /usr/lib/postgresql/18/lib
+        extension_control_path:
+          - /usr/share/postgresql/18/
+    shared_preload_libraries:
+      - "vchord.so"
   nodeMaintenanceWindow:
     inProgress: false
     reusePVC: true
