disable shared_preload_libraries

--- a/kubernetes/apps/databases/cloudnative-pg/cluster/cluster-main.yaml
+++ b/kubernetes/apps/databases/cloudnative-pg/cluster/cluster-main.yaml
@@ -31,8 +31,8 @@ spec:
           - /usr/lib/postgresql/18/lib
         extension_control_path:
           - /usr/share/postgresql/18/
-    shared_preload_libraries:
-      - "vchord.so"
+    # shared_preload_libraries:
+    #   - "vchord.so"
   resources:
     requests:
       cpu: 250m
