disable extension for now

--- a/kubernetes/apps/databases/cloudnative-pg/cluster/cluster-main.yaml
+++ b/kubernetes/apps/databases/cloudnative-pg/cluster/cluster-main.yaml
@@ -22,17 +22,17 @@ spec:
       max_connections: "600"
       max_slot_wal_keep_size: 10GB
       shared_buffers: 512MB
-    extensions:
-      - name: vchord
-        image:
-          # renovate: datasource=docker depName=ghcr.io/tensorchord/vchord-scratch
-          reference: ghcr.io/tensorchord/vchord-scratch:pg18-v0.5.3
-        dynamic_library_path:
-          - /usr/lib/postgresql/18/lib
-        extension_control_path:
-          - /usr/share/postgresql/18/
-    shared_preload_libraries:
-      - "vchord.so"
+    # extensions:
+    #   - name: vchord
+    #     image:
+    #       # renovate: datasource=docker depName=ghcr.io/tensorchord/vchord-scratch
+    #       reference: ghcr.io/tensorchord/vchord-scratch:pg18-v0.5.3
+    #     dynamic_library_path:
+    #       - /usr/lib/postgresql/18/lib
+    #     extension_control_path:
+    #       - /usr/share/postgresql/18/
+    # shared_preload_libraries:
+    #   - "vchord.so"
   resources:
     requests:
       cpu: 250m
