--- a/kubernetes/apps/networking/multus/app/helmrelease.yaml
+++ b/kubernetes/apps/networking/multus/app/helmrelease.yaml
@@ -1,110 +1,42 @@
 ---
+# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/source.toolkit.fluxcd.io/ocirepository_v1.json
+apiVersion: source.toolkit.fluxcd.io/v1
+kind: OCIRepository
+metadata:
+  name: multus
+spec:
+  interval: 15m
+  layerSelector:
+    mediaType: application/vnd.cncf.helm.chart.content.v1.tar+gzip
+    operation: copy
+  ref:
+    tag: 1.0.0
+  url: oci://ghcr.io/bjw-s-labs/helm/multus
+---
+# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/helm.toolkit.fluxcd.io/helmrelease_v2.json
 apiVersion: helm.toolkit.fluxcd.io/v2
 kind: HelmRelease
 metadata:
-  name: &app multus
+  name: multus
 spec:
-  interval: 1h
   chartRef:
     kind: OCIRepository
-    name: app-template
-    namespace: flux-system
-  install:
-    remediation:
-      retries: -1
-  upgrade:
-    cleanupOnFail: true
-    remediation:
-      retries: 3
+    name: multus
+  interval: 30m
   values:
-    controllers:
-      multus:
-        type: daemonset
-
-        pod:
-          hostNetwork: true
-          priorityClassName: system-node-critical
-          tolerations:
-            - key: CriticalAddonsOnly
-              operator: Exists
-
-        initContainers:
-          cni-plugins:
-            image:
-              repository: ghcr.io/home-operations/cni-plugins
-              tag: 1.8.0@sha256:ce64a071c3c0f2e8c4620d588e45e36010ab05f63c4dd484b568c39e9346beac
-
-        containers:
-          multus:
-            image:
-              repository: ghcr.io/k8snetworkplumbingwg/multus-cni
-              tag: v4.2.2
-            args:
-              - --cleanup-config-on-exit
-              - --multus-cni-conf-dir=/tmp
-            resources:
-              requests:
-                cpu: "10m"
-              limits:
-                memory: "512Mi"
-            securityContext:
-              allowPrivilegeEscalation: false
-              readOnlyRootFilesystem: true
-              capabilities:
-                add:
-                  - NET_ADMIN
-                drop:
-                  - ALL
-
-    persistence:
-      etc-cni-net-d:
-        type: hostPath
-        hostPath: /etc/cni/net.d
-        globalMounts:
-          - path: /host/etc/cni/net.d
-      opt-cni-bin:
-        type: hostPath
-        hostPath: /opt/cni/bin
-        globalMounts:
-          - path: /host/opt/cni/bin
-      tmp:
-        type: emptyDir
-
-    rbac:
-      roles:
-        multus:
-          type: ClusterRole
-          rules:
-            - apiGroups:
-                - "k8s.cni.cncf.io"
-              resources:
-                - "*"
-              verbs:
-                - "*"
-            - apiGroups:
-                - ""
-              resources:
-                - "pods"
-                - "pods/status"
-              verbs:
-                - "get"
-                - "update"
-            - apiGroups:
-                - ""
-                - "events.k8s.io"
-              resources:
-                - "events"
-              verbs:
-                - "create"
-                - "patch"
-                - "update"
-      bindings:
-        multus:
-          type: ClusterRoleBinding
-          roleRef:
-            identifier: multus
-          subjects:
-            - identifier: multus
-
-    serviceAccount:
-      multus: {}
+    cni-plugins:
+      image:
+        repository: ghcr.io/home-operations/cni-plugins
+        tag: 1.8.0
+    multus:
+      image:
+        repository: ghcr.io/k8snetworkplumbingwg/multus-cni
+        tag: v4.2.2
+      resources:
+        requests:
+          cpu: 10m
+        limits:
+          memory: 32Mi
+    cni:
+      netPath: /etc/cni/net.d
+      binPath: /opt/cni/bin
