--- a/.github/workflows/image-pull.yaml
+++ b/.github/workflows/image-pull.yaml
@@ -101,8 +101,7 @@ jobs:
       fail-fast: false
     steps:
       - name: Install talosctl
-        run: curl -fsSL https://talos.dev/install | sh
-
+        run: curl -fsSL https://raw.githubusercontent.com/siderolabs/talos/b412ffdbc29d77a81aed88be62f21bc2999afcde/website/static/install | sh
       - name: Pull Image
         run: talosctl --nodes $NODE image pull ${{ matrix.images }}
 
