--- a/kubernetes/apps/default/dispatcharr/app/helmrelease.yaml
+++ b/kubernetes/apps/default/dispatcharr/app/helmrelease.yaml
@@ -42,12 +42,15 @@ spec:
       app:
         className: internal
         hosts:
-          - host: "{{ .Release.Name }}.${SECRET_DOMAIN}"
+          - host: &host "{{ .Release.Name }}.${SECRET_DOMAIN}"
             paths:
               - path: /
                 service:
                   identifier: app
                   port: http
+        tls:
+          - hosts:
+              - *host
     persistence:
       data:
         existingClaim: dispatcharr
